# rules_edalize

./: README.md  WORKSPACE
.github/workflows/: ci.yaml
example/: BUILD.bazel  counter.pcf  counter.v  edalize.bzl  el_docker.py  example.py
