load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@py_deps//:requirements.bzl", "requirement")

py_binary(
    name = "example",
    srcs = [":example.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("edalize")],
    data = [
        "counter.v",
        "counter.pcf",
	":el_docker",
	"//:README.md",
    ],
    env = {"EDALIZE_LAUNCHER": "$(location :el_docker)"},
    args = ["$(location counter.v) $(location counter.pcf) $(location //:README.md)"],
)

py_binary(
    name = "el_docker",
    srcs = ["el_docker.py"],
)
