load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@py_deps//:requirements.bzl", "requirement")
load("//example:edalize.bzl", "edalize")

py_binary(
    name = "example",
    srcs = [":example.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("edalize")],
    data = [
        "counter.v",
        "counter.pcf",
	":el_docker",
	"//:README.md",
    ],
    env = {"EDALIZE_LAUNCHER": "$(location :el_docker)"},
    args = ["--input=$(location counter.v) --input=$(location counter.pcf) --root=$(location //:README.md) --output=../counter_test.vc"],
)

edalize(
    name = "build",
    srcs = [
        "counter.v",
        "counter.pcf",
    ],
    spec = ":example",
    outs = ["counter_test.vc"]
)

py_binary(
    name = "el_docker",
    srcs = ["el_docker.py"],
)
